tests/baselines/reference/genericArrayWithoutTypeAnnotation.errors.txt
genericArrayWithoutTypeAnnotation.ts(4,24): error TS2314: Generic type 'IFoo<T>' requires 1 type argument(s).


==== genericArrayWithoutTypeAnnotation.ts (1 errors) ====
    interface IFoo<T>{
    }
    class Bar {
        public getBar(foo: IFoo[]) {
                           ~~~~
!!! error TS2314: Generic type 'IFoo<T>' requires 1 type argument(s).
        }
    }
    